# ChinesePreProcessing

./: .gitignore  CMakeLists.txt  README.md  build.sh  file_processing.cpp  file_processing.h  raw_file_processing.cpp  raw_file_processing.h  sen_file_processing.cpp  sen_file_processing.h
test/: CMakeLists.txt  test.txt  testBin.cpp  testCTPP.cpp  testSen.cpp
test/orgDir/: CorporaSample1.txt  PeopleDailySample.txt  test1.txt  test2.txt  test3.txt
